--- a/ar-tist-canvas/package.json
+++ b/ar-tist-canvas/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "ar-tist-canvas",
+  "author": "You <you@example.com>",
+  "name": "rust-webpack-template",
   "version": "0.1.0",
-  "description": "ar-tist",
-  "collaborators": [
-    "yuby <leesyub@gmail.com>"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yuby/ar-tist.git"
+  "scripts": {
+    "build": "rimraf dist pkg && webpack",
+    "start": "rimraf dist pkg && webpack serve",
+    "test": "cargo test && wasm-pack test --headless"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yuby/ar-tist/issues"
+  "dependencies": {
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
-  "homepage": "https://github.com/yuby/ar-tist#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@wasm-tool/wasm-pack-plugin": "^1.1.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "html-webpack-plugin": "^5.3.2",
+    "rimraf": "^3.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
