--- a/ar-tist-canvas/package.json
+++ b/ar-tist-canvas/package.json
@@ -8,6 +8,7 @@
     "test": "cargo test && wasm-pack test --headless"
   },
   "dependencies": {
+    "@babylonjs/core": "^4.2.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
